Fixes landing page text alignment

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -168,7 +168,9 @@ small {
 .learn-more {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
+  margin-top: 2rem;
   font-size: 0.8125rem;
   color: $clr-green-400;
   &:hover {
